<resources>
    <string name="app_name">ParkinApp</string>
    <string name="registro">Regístrate</string>
    <string name="log_in">Entrar</string>
    <string name="contra">Contraseña</string>
    <string name="usu">Usuario</string>


    <string name="title_section1">Ubicación</string>
    <string name="title_section2">Parqueaderos</string>

    <string name="action_settings">Settings</string>
    <string name="action_shop">Cerrar Sesión</string>

    <string name="url">http://192.168.0.22:8080/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_phone">Teléfono</string>
    <string name="detail_address">Dirección</string>
    <string name="calif">Mi calificación</string>
    <string name="description">Descripción</string>
    <string name="freeSlots">Lugares libres</string>
    <string name="closeTime">Hora de cerrado</string>
    <string name="openTime">Hora de apertura</string>
    <string name="cost">Costo/hora</string>

</resources>
